[gd_scene load_steps=3 format=2]

[ext_resource path="res://Achievements.gd" type="Script" id=1]
[ext_resource path="res://achievements/AchievementToastie.tscn" type="PackedScene" id=2]

[node name="Achievements" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = -384.0
margin_bottom = -168.0
rect_pivot_offset = Vector2( 640, 360 )
rect_clip_content = true
mouse_filter = 2
script = ExtResource( 1 )

[node name="YSort" type="YSort" parent="."]

[node name="AchievementToastie1" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 0, -64 )

[node name="AchievementToastie2" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 0, -64 )

[node name="AchievementToastie3" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 0, -64 )

[node name="Tween" type="Tween" parent="."]
